// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`default renderer: show subtasks should be able to change concurrency setting in subtask, second subtask should finish first: 3ygUxrTkCDLDfDrXzF1ocWR6626jaL0k-exit 1`] = `[]`;

exports[`default renderer: show subtasks should be able to change concurrency setting in subtask, second subtask should finish first: 3ygUxrTkCDLDfDrXzF1ocWR6626jaL0k-stderr 1`] = `[]`;

exports[`default renderer: show subtasks should be able to change concurrency setting in subtask, second subtask should finish first: 3ygUxrTkCDLDfDrXzF1ocWR6626jaL0k-stdout 1`] = `
[
  "[?25l",
  "[2m◼[22m This task will execute.
",
  "[2K[1A[2K[G[33m❯[39m This task will execute.
",
  "[2K[1A[2K[G[33m❯[39m This task will execute.
  [2m◼[22m This is a subtask.
",
  "[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute.
  [2m◼[22m This is a subtask.
  [2m◼[22m This is an another subtask.
",
  "[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute.
  [33m❯[39m This is a subtask.
  [2m◼[22m This is an another subtask.
",
  "[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute.
  [33m❯[39m This is a subtask.
  [33m❯[39m This is an another subtask.
",
  "[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute.
  [33m❯[39m This is a subtask.
  [32m✔[39m This is an another subtask.
",
  "[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute.
  [32m✔[39m This is a subtask.
  [32m✔[39m This is an another subtask.
",
  "[2K[1A[2K[1A[2K[1A[2K[G[32m✔[39m This task will execute.
",
  "[2K[1A[2K[G",
  "[32m✔[39m This task will execute.
",
  "[?25h",
]
`;

exports[`default renderer: show subtasks should be able to change exit on error: 12ttDlnth5pr1YuJEnfXm3I2CzRbcFlY-exit 1`] = `[]`;

exports[`default renderer: show subtasks should be able to change exit on error: 12ttDlnth5pr1YuJEnfXm3I2CzRbcFlY-stderr 1`] = `[]`;

exports[`default renderer: show subtasks should be able to change exit on error: 12ttDlnth5pr1YuJEnfXm3I2CzRbcFlY-stdout 1`] = `
[
  "[?25l",
  "[2m◼[22m This task will execute and not quit on errors.
",
  "[2K[1A[2K[G[2m◼[22m This task will execute and not quit on errors.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute and not quit on errors.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute and not quit on errors.
  [2m◼[22m This is a subtask.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute and not quit on errors.
  [2m◼[22m This is a subtask.
  [2m◼[22m This is an another subtask.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute and not quit on errors.
  [2m◼[22m This is a subtask.
  [2m◼[22m This is an another subtask.
  [2m◼[22m This is yet an another subtask.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute and not quit on errors.
  [33m❯[39m This is a subtask.
  [2m◼[22m This is an another subtask.
  [2m◼[22m This is yet an another subtask.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute and not quit on errors.
  [31m✖[39m This is a subtask.
  [2m◼[22m This is an another subtask.
  [2m◼[22m This is yet an another subtask.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute and not quit on errors.
  [31m✖[39m I have failed [0]
  [2m◼[22m This is an another subtask.
  [2m◼[22m This is yet an another subtask.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute and not quit on errors.
  [31m✖[39m I have failed [0]
  [33m❯[39m This is an another subtask.
  [2m◼[22m This is yet an another subtask.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute and not quit on errors.
  [31m✖[39m I have failed [0]
  [31m✖[39m This is an another subtask.
  [2m◼[22m This is yet an another subtask.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute and not quit on errors.
  [31m✖[39m I have failed [0]
  [31m✖[39m I have failed [1]
  [2m◼[22m This is yet an another subtask.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute and not quit on errors.
  [31m✖[39m I have failed [0]
  [31m✖[39m I have failed [1]
  [33m❯[39m This is yet an another subtask.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute and not quit on errors.
  [31m✖[39m I have failed [0]
  [31m✖[39m I have failed [1]
  [33m❯[39m I have succeeded.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute and not quit on errors.
  [31m✖[39m I have failed [0]
  [31m✖[39m I have failed [1]
  [32m✔[39m I have succeeded.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[33m⚠[39m This task will execute and not quit on errors.
  [31m✖[39m I have failed [0]
  [31m✖[39m I have failed [1]
  [32m✔[39m I have succeeded.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[33m⚠[39m This task will execute and not quit on errors.
  [31m✖[39m I have failed [0]
  [31m✖[39m I have failed [1]
  [32m✔[39m I have succeeded.
[33m❯[39m This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[33m⚠[39m This task will execute and not quit on errors.
  [31m✖[39m I have failed [0]
  [31m✖[39m I have failed [1]
  [32m✔[39m I have succeeded.
[31m✖[39m This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[33m⚠[39m This task will execute and not quit on errors.
  [31m✖[39m I have failed [0]
  [31m✖[39m I have failed [1]
  [32m✔[39m I have succeeded.
[31m✖[39m exit
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G",
  "[33m⚠[39m This task will execute and not quit on errors.
  [31m✖[39m I have failed [0]
  [31m✖[39m I have failed [1]
  [32m✔[39m I have succeeded.
[31m✖[39m exit
",
  "[?25h",
]
`;

exports[`default renderer: show subtasks should create a set of subtasks: JQYWVb3x1scokQK2IzhwA4F0qxWbYzXR-exit 1`] = `[]`;

exports[`default renderer: show subtasks should create a set of subtasks: JQYWVb3x1scokQK2IzhwA4F0qxWbYzXR-stderr 1`] = `[]`;

exports[`default renderer: show subtasks should create a set of subtasks: JQYWVb3x1scokQK2IzhwA4F0qxWbYzXR-stdout 1`] = `
[
  "[?25l",
  "[2m◼[22m This task will execute.
",
  "[2K[1A[2K[G[33m❯[39m This task will execute.
",
  "[2K[1A[2K[G[33m❯[39m This task will execute.
  [2m◼[22m This is a subtask.
",
  "[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute.
  [2m◼[22m This is a subtask.
  [2m◼[22m This is a subtask.
",
  "[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute.
  [33m❯[39m This is a subtask.
  [2m◼[22m This is a subtask.
",
  "[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute.
  [32m✔[39m This is a subtask.
  [2m◼[22m This is a subtask.
",
  "[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute.
  [32m✔[39m This is a subtask.
  [33m❯[39m This is a subtask.
",
  "[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute.
  [32m✔[39m This is a subtask.
  [32m✔[39m This is a subtask.
",
  "[2K[1A[2K[1A[2K[1A[2K[G[32m✔[39m This task will execute.
",
  "[2K[1A[2K[G",
  "[32m✔[39m This task will execute.
",
  "[?25h",
]
`;

exports[`simple renderer: show subtasks should be able to change concurrency setting in subtask, second subtask should finish first: 3ygUxrTkCDLDfDrXzF1ocWR6626jaL0k-exit 1`] = `[]`;

exports[`simple renderer: show subtasks should be able to change concurrency setting in subtask, second subtask should finish first: 3ygUxrTkCDLDfDrXzF1ocWR6626jaL0k-stderr 1`] = `[]`;

exports[`simple renderer: show subtasks should be able to change concurrency setting in subtask, second subtask should finish first: 3ygUxrTkCDLDfDrXzF1ocWR6626jaL0k-stdout 1`] = `
[
  "[33m❯[39m This task will execute.
",
  "[33m❯[39m This is a subtask.
",
  "[33m❯[39m This is an another subtask.
",
  "[32m✔[39m This is an another subtask.
",
  "[32m✔[39m This is a subtask.
",
  "[32m✔[39m This task will execute.
",
]
`;

exports[`simple renderer: show subtasks should be able to change exit on error: 12ttDlnth5pr1YuJEnfXm3I2CzRbcFlY-exit 1`] = `[]`;

exports[`simple renderer: show subtasks should be able to change exit on error: 12ttDlnth5pr1YuJEnfXm3I2CzRbcFlY-stderr 1`] = `
[
  "[31m✖[39m This is a subtask. [31m[FAILED: I have failed [0]][39m
",
  "[31m✖[39m This is an another subtask. [31m[FAILED: I have failed [1]][39m
",
  "[31m✖[39m This task will execute. [31m[FAILED: exit][39m
",
]
`;

exports[`simple renderer: show subtasks should be able to change exit on error: 12ttDlnth5pr1YuJEnfXm3I2CzRbcFlY-stdout 1`] = `
[
  "[33m❯[39m This task will execute and not quit on errors.
",
  "[33m❯[39m This is a subtask.
",
  "[33m❯[39m This is an another subtask.
",
  "[33m❯[39m This is yet an another subtask.
",
  "[32m✔[39m I have succeeded.
",
  "[32m✔[39m This task will execute and not quit on errors.
",
  "[33m❯[39m This task will execute.
",
]
`;

exports[`simple renderer: show subtasks should create a set of subtasks: JQYWVb3x1scokQK2IzhwA4F0qxWbYzXR-exit 1`] = `[]`;

exports[`simple renderer: show subtasks should create a set of subtasks: JQYWVb3x1scokQK2IzhwA4F0qxWbYzXR-stderr 1`] = `[]`;

exports[`simple renderer: show subtasks should create a set of subtasks: JQYWVb3x1scokQK2IzhwA4F0qxWbYzXR-stdout 1`] = `
[
  "[33m❯[39m This task will execute.
",
  "[33m❯[39m This is a subtask.
",
  "[32m✔[39m This is a subtask.
",
  "[33m❯[39m This is a subtask.
",
  "[32m✔[39m This is a subtask.
",
  "[32m✔[39m This task will execute.
",
]
`;

exports[`test renderer: show subtasks should be able to change concurrency setting in subtask, second subtask should finish first: 3ygUxrTkCDLDfDrXzF1ocWR6626jaL0k-exit 1`] = `[]`;

exports[`test renderer: show subtasks should be able to change concurrency setting in subtask, second subtask should finish first: 3ygUxrTkCDLDfDrXzF1ocWR6626jaL0k-stderr 1`] = `[]`;

exports[`test renderer: show subtasks should be able to change concurrency setting in subtask, second subtask should finish first: 3ygUxrTkCDLDfDrXzF1ocWR6626jaL0k-stdout 1`] = `
[
  "{"event":"STATE","data":"STARTED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"STATE","data":"STARTED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This is a subtask.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute.","This is a subtask."]}}
",
  "{"event":"STATE","data":"STARTED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This is an another subtask.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute.","This is an another subtask."]}}
",
  "{"event":"STATE","data":"COMPLETED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":true,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"This is an another subtask.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute.","This is an another subtask."]}}
",
  "{"event":"STATE","data":"COMPLETED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":true,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"This is a subtask.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute.","This is a subtask."]}}
",
  "{"event":"STATE","data":"COMPLETED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":true,"isSkipped":false,"hasFinalized":true,"hasSubtasks":true,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
]
`;

exports[`test renderer: show subtasks should be able to change exit on error: 12ttDlnth5pr1YuJEnfXm3I2CzRbcFlY-exit 1`] = `[]`;

exports[`test renderer: show subtasks should be able to change exit on error: 12ttDlnth5pr1YuJEnfXm3I2CzRbcFlY-stderr 1`] = `
[
  "{"event":"MESSAGE","data":{"error":"I have failed [0]"},"task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"This is a subtask.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":true,"isEnabled":true,"isRetrying":false,"path":["This task will execute and not quit on errors.","This is a subtask."]}}
",
  "{"event":"MESSAGE","data":{"error":"I have failed [1]"},"task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"This is an another subtask.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":true,"isEnabled":true,"isRetrying":false,"path":["This task will execute and not quit on errors.","This is an another subtask."]}}
",
  "{"event":"MESSAGE","data":{"error":"exit"},"task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":true,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
]
`;

exports[`test renderer: show subtasks should be able to change exit on error: 12ttDlnth5pr1YuJEnfXm3I2CzRbcFlY-stdout 1`] = `
[
  "{"event":"STATE","data":"STARTED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will execute and not quit on errors.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute and not quit on errors."]}}
",
  "{"event":"STATE","data":"STARTED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This is a subtask.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute and not quit on errors.","This is a subtask."]}}
",
  "{"event":"STATE","data":"FAILED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"This is a subtask.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":true,"isEnabled":true,"isRetrying":false,"path":["This task will execute and not quit on errors.","This is a subtask."]}}
",
  "{"event":"STATE","data":"STARTED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This is an another subtask.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute and not quit on errors.","This is an another subtask."]}}
",
  "{"event":"STATE","data":"FAILED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"This is an another subtask.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":true,"isEnabled":true,"isRetrying":false,"path":["This task will execute and not quit on errors.","This is an another subtask."]}}
",
  "{"event":"STATE","data":"STARTED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This is yet an another subtask.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute and not quit on errors.","This is yet an another subtask."]}}
",
  "{"event":"TITLE","data":"I have succeeded.","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"I have succeeded.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute and not quit on errors.","This is yet an another subtask."]}}
",
  "{"event":"STATE","data":"COMPLETED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":true,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"I have succeeded.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute and not quit on errors.","This is yet an another subtask."]}}
",
  "{"event":"STATE","data":"COMPLETED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":true,"isSkipped":false,"hasFinalized":true,"hasSubtasks":true,"title":"This task will execute and not quit on errors.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute and not quit on errors."]}}
",
  "{"event":"STATE","data":"STARTED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"STATE","data":"FAILED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":true,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
]
`;

exports[`test renderer: show subtasks should create a set of subtasks: JQYWVb3x1scokQK2IzhwA4F0qxWbYzXR-exit 1`] = `[]`;

exports[`test renderer: show subtasks should create a set of subtasks: JQYWVb3x1scokQK2IzhwA4F0qxWbYzXR-stderr 1`] = `[]`;

exports[`test renderer: show subtasks should create a set of subtasks: JQYWVb3x1scokQK2IzhwA4F0qxWbYzXR-stdout 1`] = `
[
  "{"event":"STATE","data":"STARTED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"STATE","data":"STARTED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This is a subtask.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute.","This is a subtask."]}}
",
  "{"event":"STATE","data":"COMPLETED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":true,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"This is a subtask.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute.","This is a subtask."]}}
",
  "{"event":"STATE","data":"STARTED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This is a subtask.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute.","This is a subtask."]}}
",
  "{"event":"STATE","data":"COMPLETED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":true,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"This is a subtask.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute.","This is a subtask."]}}
",
  "{"event":"STATE","data":"COMPLETED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":true,"isSkipped":false,"hasFinalized":true,"hasSubtasks":true,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
]
`;

exports[`verbose renderer: show subtasks should be able to change concurrency setting in subtask, second subtask should finish first: 3ygUxrTkCDLDfDrXzF1ocWR6626jaL0k-exit 1`] = `[]`;

exports[`verbose renderer: show subtasks should be able to change concurrency setting in subtask, second subtask should finish first: 3ygUxrTkCDLDfDrXzF1ocWR6626jaL0k-stderr 1`] = `[]`;

exports[`verbose renderer: show subtasks should be able to change concurrency setting in subtask, second subtask should finish first: 3ygUxrTkCDLDfDrXzF1ocWR6626jaL0k-stdout 1`] = `
[
  "[33m[STARTED][39m This task will execute.
",
  "[33m[STARTED][39m This is a subtask.
",
  "[33m[STARTED][39m This is an another subtask.
",
  "[32m[COMPLETED][39m This is an another subtask.
",
  "[32m[COMPLETED][39m This is a subtask.
",
  "[32m[COMPLETED][39m This task will execute.
",
]
`;

exports[`verbose renderer: show subtasks should be able to change exit on error: 12ttDlnth5pr1YuJEnfXm3I2CzRbcFlY-exit 1`] = `[]`;

exports[`verbose renderer: show subtasks should be able to change exit on error: 12ttDlnth5pr1YuJEnfXm3I2CzRbcFlY-stderr 1`] = `
[
  "[31m[FAILED][39m I have failed [0]
",
  "[31m[FAILED][39m I have failed [1]
",
  "[31m[FAILED][39m exit
",
]
`;

exports[`verbose renderer: show subtasks should be able to change exit on error: 12ttDlnth5pr1YuJEnfXm3I2CzRbcFlY-stdout 1`] = `
[
  "[33m[STARTED][39m This task will execute and not quit on errors.
",
  "[33m[STARTED][39m This is a subtask.
",
  "[33m[STARTED][39m This is an another subtask.
",
  "[33m[STARTED][39m This is yet an another subtask.
",
  "[TITLE] I have succeeded.
",
  "[32m[COMPLETED][39m I have succeeded.
",
  "[32m[COMPLETED][39m This task will execute and not quit on errors.
",
  "[33m[STARTED][39m This task will execute.
",
]
`;

exports[`verbose renderer: show subtasks should create a set of subtasks: JQYWVb3x1scokQK2IzhwA4F0qxWbYzXR-exit 1`] = `[]`;

exports[`verbose renderer: show subtasks should create a set of subtasks: JQYWVb3x1scokQK2IzhwA4F0qxWbYzXR-stderr 1`] = `[]`;

exports[`verbose renderer: show subtasks should create a set of subtasks: JQYWVb3x1scokQK2IzhwA4F0qxWbYzXR-stdout 1`] = `
[
  "[33m[STARTED][39m This task will execute.
",
  "[33m[STARTED][39m This is a subtask.
",
  "[32m[COMPLETED][39m This is a subtask.
",
  "[33m[STARTED][39m This is a subtask.
",
  "[32m[COMPLETED][39m This is a subtask.
",
  "[32m[COMPLETED][39m This task will execute.
",
]
`;
